@@ -1,5 +1,6 @@
 Changelog for Uniplate
 
+    Give better Data instances for the containers package
 1.6.3
     #454, use unordered-containers on GHC 7.2 and above (faster)
 1.6.2
